# rabbitmq-pika

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
1_hello_world/: consumer.py  publisher.py
2_work_queues/: consumer.py  publisher.py
3_publish_subscribe/: consumer.py  publisher.py  settings.py
4_routing/: consumer.py  publisher.py
5_topics/: consumer.py  publisher.py
6_rpc/: client.py  server.py
